<resources>
    <string name="app_name">NoteCalendar</string>
    <string name="hour_0_12">0 AM</string>
    <string name="hour_1_12">1 AM</string>
    <string name="hour_2_12">2 AM</string>
    <string name="hour_3_12">3 AM</string>
    <string name="hour_4_12">4 AM</string>
    <string name="hour_5_12">5 AM</string>
    <string name="hour_6_12">6 AM</string>
    <string name="hour_7_12">7 AM</string>
    <string name="hour_8_12">8 AM</string>
    <string name="hour_9_12">9 AM</string>
    <string name="hour_10_12">10 AM</string>
    <string name="hour_11_12">11 AM</string>
    <string name="hour_12_12">12 PM</string>
    <string name="hour_13_12">1 PM</string>
    <string name="hour_14_12">2 PM</string>
    <string name="hour_15_12">3 PM</string>
    <string name="hour_16_12">4 PM</string>
    <string name="hour_17_12">5 PM</string>
    <string name="hour_18_12">6 PM</string>
    <string name="hour_19_12">7 PM</string>
    <string name="hour_20_12">8 PM</string>
    <string name="hour_21_12">9 PM</string>
    <string name="hour_22_12">10 PM</string>
    <string name="hour_23_12">11 PM</string>
    <string name="hour_0_24">00:00</string>
    <string name="hour_1_24">01:00</string>
    <string name="hour_2_24">02:00</string>
    <string name="hour_3_24">03:00</string>
    <string name="hour_4_24">04:00</string>
    <string name="hour_5_24">05:00</string>
    <string name="hour_6_24">06:00</string>
    <string name="hour_7_24">07:00</string>
    <string name="hour_8_24">08:00</string>
    <string name="hour_9_24">09:00</string>
    <string name="hour_10_24">10:00</string>
    <string name="hour_11_24">11:00</string>
    <string name="hour_12_24">12:00</string>
    <string name="hour_13_24">13:00</string>
    <string name="hour_14_24">14:00</string>
    <string name="hour_15_24">15:00</string>
    <string name="hour_16_24">16:00</string>
    <string name="hour_17_24">17:00</string>
    <string name="hour_18_24">18:00</string>
    <string name="hour_19_24">19:00</string>
    <string name="hour_20_24">20:00</string>
    <string name="hour_21_24">21:00</string>
    <string name="hour_22_24">22:00</string>
    <string name="hour_23_24">23:00</string>
</resources>