<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:layout_marginStart="40dp"
        android:translationZ="1dp"/>

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_0_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_1_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_2_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_3_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_4_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_5_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_6_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_7_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_8_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_9_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_10_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_11_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_12_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_13_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_14_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_15_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_16_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_17_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_18_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_19_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_20_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_21_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_22_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@drawable/bg_calendar_divider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_23_12"
            android:fontFamily="@font/sanf_medium"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"/>
    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>